Overflow fix

--- a/client/stylus/app.styl
+++ b/client/stylus/app.styl
@@ -2,6 +2,10 @@
 @import "sizes.styl"
 @import "typography.styl"
 
+html {
+  overflow hidden
+}
+
 .container
   position relative
   display flex
